# aoc

2024/elixir/: .gitignore  Makefile  README.md
2024/elixir/lib/: aoc2024.ex
2024/elixir/lib/days/: day01.ex
2025/haskell/: aoc2025.cabal  hie.yaml
2025/haskell/src/: AdventOfCode.hs  Utilities.hs
2025/haskell/src/Days/: Day01.hs  Day02.hs  Day03.hs  Day06.hs  Day09.hs
2025/python/: .gitignore  flake.nix  justfile  main.py
2025/python/days/: day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
