cabal-version: 3.0
name: aoc2025
version: 0.1.0.0
-- synopsis:
-- description:
homepage: https://github.com/mathletedev/aoc
license: GPL-3.0-or-later
license-file: LICENSE
author: Neal Wang
maintainer: nealwang.sh@protonmail.com
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    AdventOfCode
    Days.Day01
    Days.Day02
    Days.Day03
    Utilities

  -- other-modules:
  -- other-extensions:
  build-depends:
    base,
    split,

  hs-source-dirs: src
  default-language: Haskell2010

executable aoc2025
  import: warnings
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    aoc2025,
    base,

  hs-source-dirs: app
  default-language: Haskell2010
